show data from db

--- a/books/templates/books/index.html
+++ b/books/templates/books/index.html
@@ -16,7 +16,7 @@
         <a href="{% url 'book.show' book.id %}" class="justify-self-center text-center my-4" target="_blank">
             <div>
                 <h3>
-                    {{book.name}}
+                    {{book.title}}
                 </h3>
                 <img src="{{book.thumbnailUrl}}" width="150px">
             </div>
