--- a/books/templates/books/single-book.html
+++ b/books/templates/books/single-book.html
@@ -11,6 +11,8 @@
         {{book.title}}
     </h1>
 
+    {{book}}
+
     <div class="flex justify-between">
         <div class="w-3/12 p-4">
             <img src="{{book.thumbnailUrl}}" width="150px">
