--- a/books/templates/books/single-book.html
+++ b/books/templates/books/single-book.html
@@ -10,9 +10,6 @@
     <h1 class="text-center text-4xl">
         {{book.title}}
     </h1>
-
-    {{book}}
-
     <div class="flex justify-between">
         <div class="w-3/12 p-4">
             <img src="{{book.thumbnailUrl}}" width="150px">
@@ -29,7 +26,7 @@
                     <h3 class="text-2xl m-3 ms-0">
                         Author
                     </h3>
-                    {{book.authors|join:", "}}
+                    {{book.authors}}
                 </div>
     
                 <div class="mt-2">
@@ -47,6 +44,22 @@
                     {{book.longDescription}}
                 </div>
             </div>
+            <form method="post" action="{% url 'review.add' %}">
+                {% csrf_token %}
+                <input type="hidden" name="id" value="{{book.id}}">
+                <textarea name="review" rows="3" class="mt-5 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                <div class="mt-5 flex items-center justify-end gap-x-6">
+                    <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
+                  </div>
+                </form>
+
+                <div class="mt-3">
+                    {% for review in reviews %}
+                    <div class="mt-2">
+                        {{review.body}}
+                    </div>
+                    {% endfor %}
+                </div>
         </div>
 
 
