--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -54,7 +54,7 @@
                 </form>
 
                 <div class="mt-3">
-                    {% for review in reviews %}
+                    {% for review in review %}
                     <div class="mt-2">
                         {{review.body}}
                     </div>
