--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>django</title>
-</head>
-<body>
+
+{% extends "books/base.html" %}
+
+{% block title %}
+    <title>Books</title>
+    {% endblock %}
+
+{% block content %}
     <h1 class="text-center text-4xl">
         Books
     </h1>
@@ -23,6 +22,4 @@
             </a>
         {% endfor %}
     </div>
-    
-</body>
-</html>
+{% endblock %}
