many to many relationship

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -24,7 +24,9 @@
                     <h3 class="text-2xl m-3 ms-0">
                         Author
                     </h3>
-                    {{book.authors}}
+                    {% for author in authors %}
+                        {{author}}, 
+                    {% endfor %}
                 </div>
     
                 <div class="mt-2">
