--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -46,18 +46,26 @@
                     {{book.longDescription}}
                 </div>
             </div>
-            <form method="post" action="{% url 'review.add' %}">
-                {% csrf_token %}
-                <input type="hidden" name="id" value="{{book.id}}">
-                <textarea name="review" rows="3" class="mt-5 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
-                <div class="mt-5 flex items-center justify-end gap-x-6">
-                    <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
-                  </div>
+                {% if user.is_authenticated %}
+                <form method="post" action="{% url 'review.add' %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="id" value="{{book.id}}">
+                    <textarea name="review" rows="3" class="mt-5 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                    <div class="mt-5 flex items-center justify-end gap-x-6">
+                        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
+                    </div>
                 </form>
+                {% else %}
+                login
+                {% endif %}
 
                 <div class="mt-3">
                     {% for review in review %}
-                    <div class="mt-2">
+                    <div class="mt-2 mr-10 bg-gray-50">
+                        <div class="flex justify-between text-gray-400">
+                            <p>{{review.user}}</p>
+                            <p>{{review.created_at}}</p>
+                        </div>
                         {{review.body}}
                     </div>
                     {% endfor %}
