--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -69,7 +69,9 @@
                             <p>{{review.created_at}}</p>
                         </div>
                         {{review.body}}
-                        <img src="{{review.image}}" width="100px">
+                        {% if review.image %}
+                        <img src="{{review.image.url}}" width="100px">
+                        {% endif %}
                     </div>
                     {% endfor %}
                 </div>
