--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    {% block title %}
-    <title>django</title>
-    {% endblock %}
+    <title>
+        {% block title %}
+            Books
+        {% endblock %}
+    </title>
 </head>
-<body>
+<body class="bg-green-50">
 
+    <div class="h-20 bg-gray-700 w-screen px-24">
+        <div class="flex content-between">
+            <div class="w-1/3">
+                <a href="/">
+                    <img src="/media/assets/logo.png" width="60px">
+                </a>
+            </div>
+            <div class="w-1/3 my-auto text-center">
+                <span class="bg-clip-text text-transparent bg-gradient-to-b from-slate-50 to-green-600 text-4xl font-bold">
+                    {% block heading %}
+            Books
+        {% endblock %}
+                </span>
+            </div>
+            <div class="w-1/3 my-auto text-end">
+                {% if user.is_authenticated %}
+<form method="post" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit" class="bg-green-500 p-1 px-4 rounded text-white hover:bg-green-600">Log out</button>
+</form>
+{% else %}
+        <a href="{% url 'login' %}" class="bg-green-500 p-1 px-4 rounded text-white hover:bg-green-600">Log in</a>
+{% endif %}
+            </div>
+        </div>
+    </div>
+
+    <div class="px-24">
     {% block content %}
 
     {% endblock %}
+</div>
     
 </body>
 </html>
