--- a/templates/base.html
+++ b/templates/base.html
@@ -10,23 +10,23 @@
         {% endblock %}
     </title>
 </head>
-<body class="bg-green-50">
+<body class="bg-gradient-to-r from-sky-500 to-indigo-500">
 
-    <div class="h-20 bg-gray-700 w-screen px-24">
-        <div class="flex content-between">
-            <div class="w-1/3">
+    <div class="h-48 md:h-20 bg-gray-700 w-screen px-3 md:px-24">
+        <div class="md:flex content-between">
+            <div class="md:w-1/3">
                 <a href="/">
                     <img src="/media/assets/logo.png" width="60px">
                 </a>
             </div>
-            <div class="w-1/3 my-auto text-center">
+            <div class="md:w-1/3 mt-2 md:my-auto md:text-center">
                 <span class="bg-clip-text text-transparent bg-gradient-to-b from-slate-50 to-green-600 text-4xl font-bold">
                     {% block heading %}
             Books
         {% endblock %}
                 </span>
             </div>
-            <div class="w-1/3 my-auto text-end">
+            <div class="md:w-1/3 mt-2 md:my-auto md:text-end">
                 {% if user.is_authenticated %}
 <form method="post" action="{% url 'logout' %}">
     {% csrf_token %}
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div class="px-24">
+    <div class="px-3 md:px-24">
     {% block content %}
 
     {% endblock %}
