--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,6 +2,15 @@
 
 {% block content %}
 
+<div class="mt-5 w-1/3 mx-auto p-5 border rounded-xl backdrop-blur-sm bg-white/30 hover:shadow-2xl hover:backdrop-blur-3xl">
+
+    <div class="my-5">
+        <h1 class="text-3xl">
+            Login
+        </h1>
+    </div>
+
+    <div class="my-5">
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
@@ -14,25 +23,25 @@
     <p>Please login to see this page.</p>
     {% endif %}
 {% endif %}
+</div>
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+    <form method="post" action="{% url 'login' %}">
+    {% csrf_token %}
+    <table>
+    <tr>
+        <td>{{ form.username.label_tag }}</td>
+        <td>{{ form.username }}</td>
+    </tr>
+    <tr>
+        <td>{{ form.password.label_tag }}</td>
+        <td>{{ form.password }}</td>
+    </tr>
+    </table>
 
-<input type="submit" value="login">
-<input type="hidden" name="next" value="{{ next }}">
-</form>
+    <input type="submit" value="login" class="bg-green-500 p-1 px-4 rounded-md text-white hover:bg-green-600 my-3">
+    <input type="hidden" name="next" value="{{ next }}">
+    </form>
 
-{# Assumes you set up the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
+    <p><a href="{% url 'password_reset' %}" class="text-gray-600">Lost password?</a></p>
+</div>
 {% endblock %}
