--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -10,13 +10,13 @@
 
 {% block content %}
     
-    <div class="flex justify-between">
-        <div class="w-3/12 p-4">
+    <div class="md:flex mt-3">
+        <div class="md:w-3/12 p-4">
             {% if book.photo %}
-                    <img src="{{book.photo.url}}" width="150px">
+                    <img src="{{book.photo.url}}" class="rounded-md w-screen">
                     {% endif %}
         </div>
-        <div class="w-9/12 p-4">
+        <div class="md:w-9/12 p-4">
             <div>
                 <div>
                     <h3 class="text-2xl m-3 ms-0">
@@ -65,8 +65,8 @@
 
                 <div class="mt-3">
                     {% for review in review %}
-                    <div class="mt-2 mr-10 bg-gray-50">
-                        <div class="flex justify-between text-gray-400">
+                    <div class="mt-2 mr-10 bg-gray-50 bg-opacity-20 p-5 rounded-md">
+                        <div class="flex justify-between text-gray-700">
                             <p>{{review.user}}</p>
                             <p>{{review.created_at}}</p>
                         </div>
